Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-2062

DOMImplementationImpl class declaration is missing CDOM_EXPORT

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Trivial
    • Resolution: Fixed
    • 3.1.0, 3.1.1, 3.1.2, 3.1.3, 3.1.4
    • 3.2.0
    • DOM
    • Important for Windows platforms.
    • Patch

    Description

      Cannot extend class DOMImplementationImpl from outside the library because it is not being properly exported.

      Patch follows (probably easier to change by hand).

      -----------

      diff --git a/xerces-c-3.1.3/src/xercesc/dom/impl/DOMImplementationImpl.hpp b/../
      xerces-c-3.1.3/src/xercesc/dom/impl/DOMImplementationImpl.hpp
      index e68a323..aec02cb 100644
      — a/xerces-c-3.1.3/src/xercesc/dom/impl/DOMImplementationImpl.hpp
      +++ b/../xerces-c-3.1.3/src/xercesc/dom/impl/DOMImplementationImpl.hpp
      @@ -39,7 +39,7 @@ XERCES_CPP_NAMESPACE_BEGIN

      class XMLMsgLoader;

      -class DOMImplementationImpl: public XMemory,
      +class CDOM_EXPORT DOMImplementationImpl: public XMemory,
      public DOMImplementation,
      public DOMImplementationSource
      {

      Attachments

        Activity

          People

            scantor Scott Cantor
            dfletcher Dave Fletcher
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: