XERCESC-2062 - DOMImplementationImpl class declaration is missing CDOM_EXPORT

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@1801211 13f79535-47bb-0310-9956-ffa450edef68